deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bmi-app
  template:
    metadata:
      labels:
        app: bmi-app
    spec:
      containers:
      - name: bmi-app
        image: benoyj13azureservices.azurecr.io/bmi-app
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata: 
  name: bmi-app-service
spec:
  selector: 
    app: bmi-app
  ports: 
    - name: http
      port: 8501
      targetPort: 8501
