ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bmi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: bmi-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bmi-app-service
            port:
              name: http
